@@ -1,3 +1,6 @@
+12:
+- Add priority setting
+
 11:
 - Rebuild
 
